adding bulkhead fallback method for ratpack